# pubfi-docs

./: .gitignore  .mintignore  .prettierignore  .taplo.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-CODE.md  LICENSE-DOCS.md  LICENSE-notes.md  LICENSE.md  Makefile.toml  README.md  SECURITY.md  agents.md  build.rs  docs.json  faq.md  glossary.md  index.md  llms-full.txt  llms.txt  package-lock.json  package.json  project-overview.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: claim-safety-review.md  docs-bug.md
.github/workflows/: deploy-dev.yml  deploy-prd.yml  deploy-stg.yml  docs.yml  language.yml  release.yml
agent-readable/: surfaces.md
assets/: README.md
concepts/: account-credit-usage.md  capability-contracts.md  discovery.md  provider-readiness.md  readiness-and-claim-safety.md
docs/: index.md  log.md  policy.md
docs/agent-readable/: surfaces.md
docs/concepts/: discovery.md  route-planning.md
docs/decisions/: docs-okf-template-foundation.md  index.md
docs/evidence/: docs-self-check.md  index.md
docs/getting-started/: mcp-client.md  (+1 more)
examples/: README.md
getting-started/: api-key-runtime.md  mcp-client.md  quickstart.md
maintenance/: public-docs-maintenance.md
reference/: api-reference.md  architecture-map.md  provider-gateway-examples.md  public-surfaces.md  runtime-endpoints.md  security-and-public-data.md
scripts/: check-public-materials.mjs  write-static-site-assets.mjs
src/: cli.rs  main.rs
use-cases/: answer-engine-discovery.md  provider-integration-review.md
(+27 files in other folders)
